--- a/01/ex04/Makefile
+++ b/01/ex04/Makefile
@@ -1,2 +1,2 @@
 all:
-	 g++ -Wall -Wextra -Werror -std=c++98 -pedantic-errors *.cpp
+	 g++ -Wall -Wextra -Werror -std=c++98 -pedantic-errors *.cpp -o replace
