--- a/00/submit/ex01/Makefile
+++ b/00/submit/ex01/Makefile
@@ -1,4 +1,34 @@
-# https://stackoverflow.com/questions/12606713/enforcing-the-c98-standard-in-gcc
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: jkhong <jkhong@student.42kl.edu.my>        +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/11/30 20:39:21 by jkhong            #+#    #+#              #
+#    Updated: 2021/11/30 20:39:28 by jkhong           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
-all:
-	g++ -Wall -Wextra -Werror -std=c++98 -pedantic-errors phonebook.cpp Contact.cpp PhoneBook.cpp
+SRCS	=	PhoneBook.cpp	Contact.cpp		main.cpp
+NAME 	= 	crappy_phonebook
+OBJS	=	$(SRCS:.cpp=.o)
+FLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic-errors
+
+all:	$(NAME)
+
+$(NAME)	:	$(OBJS)
+			c++ $(FLAGS) $^ -o $(NAME)
+
+$(OBJS)	:	$(SRCS)
+			c++ $(FLAGS) $(SRCS) -c
+
+clean	:
+			rm -rf $(OBJS)
+		
+fclean	:	clean
+			rm -rf $(NAME)
+
+re		:	fclean all
+
+.PHONY = clean fclean re
