admin changes made

--- a/01/ex06/Makefile
+++ b/01/ex06/Makefile
@@ -6,14 +6,16 @@
 #    By: jkhong <jkhong@student.42kl.edu.my>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/06 23:19:54 by jkhong            #+#    #+#              #
-#    Updated: 2021/12/06 23:24:08 by jkhong           ###   ########.fr        #
+#    Updated: 2021/12/07 15:41:16 by jkhong           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS	=	Karen.cpp	main.cpp 
 NAME 	= 	karen
 OBJS	=	$(SRCS:.cpp=.o)
-FLAGS	=	-Wall -Wextra -Werror -Wimplicit-fallthrough=0 -std=c++98 -pedantic-errors
+# uncomment if compiling with non-MACOS
+# FALL	=	-Wimplicit-fallthrough=0
+FLAGS	=	-Wall -Wextra -Werror ${FALL} -std=c++98 -pedantic-errors
 
 all:	$(NAME)
 
