bsp for submission

--- a/02/submit/ex03/Makefile
+++ b/02/submit/ex03/Makefile
@@ -6,11 +6,11 @@
 #    By: jkhong <jkhong@student.42kl.edu.my>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/09 01:29:21 by jkhong            #+#    #+#              #
-#    Updated: 2021/12/09 16:30:55 by jkhong           ###   ########.fr        #
+#    Updated: 2021/12/09 16:54:07 by jkhong           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS	=	Fixed.cpp	Point.cpp	bsp.cpp		main2.cpp
+SRCS	=	Fixed.cpp	Point.cpp	bsp.cpp		main.cpp
 NAME 	= 	bsp
 OBJS	=	$(SRCS:.cpp=.o)
 FLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic-errors
