--- a/04/ex01/Makefile
+++ b/04/ex01/Makefile
@@ -6,14 +6,14 @@
 #    By: jkhong <jkhong@student.42kl.edu.my>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/09 18:45:45 by jkhong            #+#    #+#              #
-#    Updated: 2021/12/10 02:19:34 by jkhong           ###   ########.fr        #
+#    Updated: 2021/12/10 15:24:24 by jkhong           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS	=	Animal.cpp	Cat.cpp		Dog.cpp		Brain.cpp  main.cpp
 NAME 	= 	a.out
 OBJS	=	$(SRCS:.cpp=.o)
-# FLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic-errors
+FLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic-errors
 
 all:	$(NAME)
 
