--- a/04/ex03/Makefile
+++ b/04/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: jkhong <jkhong@student.42kl.edu.my>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/10 17:05:44 by jkhong            #+#    #+#              #
-#    Updated: 2021/12/10 23:34:06 by jkhong           ###   ########.fr        #
+#    Updated: 2021/12/13 14:41:43 by jkhong           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ SRCS	=	AMateria.cpp	Ice.cpp		Cure.cpp	\
 			Character.cpp	MateriaSource.cpp	main.cpp
 NAME 	= 	a.out
 OBJS	=	$(SRCS:.cpp=.o)
-# FLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic-errors
+FLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic-errors
 
 all:	$(NAME)
 
