--- a/04/ex01/Makefile
+++ b/04/ex01/Makefile
@@ -6,11 +6,11 @@
 #    By: jkhong <jkhong@student.42kl.edu.my>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/09 18:45:45 by jkhong            #+#    #+#              #
-#    Updated: 2021/12/13 01:31:02 by jkhong           ###   ########.fr        #
+#    Updated: 2021/12/13 15:20:28 by jkhong           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS	=	Animal.cpp	Cat.cpp		Dog.cpp		Brain.cpp  main.cpp
+SRCS	=	Animal.cpp	Cat.cpp		Dog.cpp		Brain.cpp  main_deepcopy.cpp
 NAME 	= 	a.out
 OBJS	=	$(SRCS:.cpp=.o)
 FLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic-errors
