--- a/05/ex02/Makefile
+++ b/05/ex02/Makefile
@@ -1,4 +1,4 @@
-SRCS    =	Bureaucrat.cpp	Form.cpp	main.cpp
+SRCS    =	Bureaucrat.cpp	Form.cpp	PresidentialPardonForm.cpp	 ShrubberyCreationForm.cpp RobotomyRequestForm.cpp	main.cpp
 NAME    =	a.out
 OBJS    =   $(SRCS:.cpp=.o)
 FLAGS   =   -Wall -Wextra -Werror -std=c++98 -pedantic-errors
