cpp07 notes draft and cpp06 edits

--- a/06/submit/ex02/Makefile
+++ b/06/submit/ex02/Makefile
@@ -1,7 +1,7 @@
 SRCS    =	Base.cpp	main.cpp
 NAME    =	base
 OBJS    =   $(SRCS:.cpp=.o)
-# FLAGS   =   -Wall -Wextra -Werror -std=c++98 -pedantic-errors
+FLAGS   =   -Wall -Wextra -Werror -std=c++98 -pedantic-errors
 
 all:    $(NAME)
 
