ready for cpp07 submission

--- a/07/submit/ex02/Makefile
+++ b/07/submit/ex02/Makefile
@@ -1,4 +1,4 @@
-SRCS	=	Array.cpp	main.cpp
+SRCS	=	main.cpp
 NAME 	= 	a.out
 OBJS	=	$(SRCS:.cpp=.o)
 FLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic-errors -fsanitize=address
